# auto-claude-mcp

./: README.md  mcpjungle-config.json  pyproject.toml  server.py
