[project]
name = "auto-claude-mcp"
version = "0.1.0"
description = "MCP server for Auto-Claude autonomous coding framework"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
auto-claude-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
